
add_subdirectory(FEMDisplacementBC)
IF (INSIGHT_BUILD_TOOLKIT)
  IF (NOT INSIGHT_OLD_BOOST_COMPAT)
   add_subdirectory(inflowGeneratorBC)
   add_subdirectory(initInflowGenerator)
   add_subdirectory(checkInflowGeneratorStatistics)
  ENDIF()
ENDIF()
add_subdirectory(scripts)
add_subdirectory(simpleDyMFoam)
add_subdirectory(convertPressure)
add_subdirectory(kOmegaSST2)
add_subdirectory(setVortexVelocity)
add_subdirectory(setPipeFlow)
add_subdirectory(LESFunctionObjects)
add_subdirectory(randomizeVelocity)
add_subdirectory(perturbU)
add_subdirectory(numericsFunctionObjects)
add_subdirectory(yPlusInter)
add_subdirectory(localLimitedSnGrad)
add_subdirectory(localBlendedBy)
add_subdirectory(localCellLimitedGrad)
add_subdirectory(localFaceLimitedGrad)
add_subdirectory(extendedForcesFunctionObject)
add_subdirectory(viscousForceProfile)
add_subdirectory(projectedArea)
add_subdirectory(reconCentral)
add_subdirectory(CICSAM)
add_subdirectory(fixedMeanValueBC)
add_subdirectory(harmonic2)
add_subdirectory(leastSquares2)
add_subdirectory(wallShearStressInter)
add_subdirectory(writeData)
add_subdirectory(applyBL)
add_subdirectory(refineWallLayerDist)
add_subdirectory(binningProfile)
add_subdirectory(minPatchPressure)
add_subdirectory(flattenWedges)
add_subdirectory(fieldDataProvider)