add_subdirectory(CICSAM)
add_subdirectory(FEMDisplacementBC)
add_subdirectory(LESFunctionObjects)
add_subdirectory(applyBL)
add_subdirectory(binningProfile)
add_subdirectory(consistentCurveSampleSet)
add_subdirectory(constantPressureGradient)
add_subdirectory(convertPressure)
add_subdirectory(csys)
add_subdirectory(extendedFixedValueBC)
add_subdirectory(extendedForcesFunctionObject)
add_subdirectory(fieldDataProvider)
add_subdirectory(fixedMeanValueBC)
add_subdirectory(flatPlateBLMappedFixedValue)
add_subdirectory(flattenWedges)
add_subdirectory(globalPatch)
add_subdirectory(harmonic2)
add_subdirectory(insertPrismLayers)

if (INSIGHT_BUILD_WORKBENCH)
 add_subdirectory(isutils/isofCaseBuilder)
 add_subdirectory(isutils/isofManageFunctionObject)
 add_subdirectory(isutils/isofCleanupParallelRuns)
endif()

add_subdirectory(kOmegaHe)
add_subdirectory(kOmegaSST2)
add_subdirectory(leastSquares2)
add_subdirectory(localBlendedBy)
add_subdirectory(localCellLimitedGrad)
add_subdirectory(localFaceLimitedGrad)
add_subdirectory(localLimitedSnGrad)
add_subdirectory(mapFields22)
add_subdirectory(mappedWithSwirl)
add_subdirectory(minPatchPressure)
add_subdirectory(numericsFunctionObjects)
add_subdirectory(perturbU)
add_subdirectory(projectedArea)
add_subdirectory(randomizeVelocity)
add_subdirectory(reconCentral)
add_subdirectory(refineWallLayerDist)
add_subdirectory(scripts)
add_subdirectory(setPipeFlow)
add_subdirectory(setProfile)
add_subdirectory(setVortexVelocity)
add_subdirectory(simpleDyMFoam)
add_subdirectory(surfaceProjectLine)
add_subdirectory(uniof)
add_subdirectory(viscousForceProfile)
add_subdirectory(volumeDrag)
add_subdirectory(wallShearStressInter)
add_subdirectory(writeData)
add_subdirectory(yPlusInter)
add_subdirectory(zoneExtrema)
